# mobile-use

./: .gitignore  .gitmodules  README.md  evaluate.py  evaluate_ad_detector.py  pyproject.toml  run_ad_detector.py  run_offline.py
benchmark/android_lab/: README.md  eval.py  generate_result.py  mobile_use_auto_test.py  mobile_use_executor.py
benchmark/android_world/: README.md  adb_utils.py  mobile_use_agent.py  mobile_use_environment.py  run.py  task_app.py  tasks_type.json
configs/: coloragent.yaml  mobileuse.yaml  multiagent_webui.yaml  qwen3_agent.yaml
docs/: README_zh.md  index.html  sitemap.xml
mobile_use/: environ.py  scheme.py  vlm.py  webui.py
mobile_use/agents/: __init__.py  agent_qwen.py  agent_qwen_with_summary.py  agent_react.py  base.py  hierarchical_agent.py  multi_agent.py  multi_agent_offline.py  sub_agent copy.py  sub_agent.py
mobile_use/default_prompts/: __init__.py  answer_agent.yaml  answer_agent_qwen.yaml  global_reflector.yaml  note_taker.yaml  operator.yaml  operator_qwen.yaml  planner.yaml  progressor.yaml  prompt_type.py  qwen3_agent.yaml  qwen_agent.yaml  react_agent.yaml  reflector.yaml  task_extractor.yaml  task_orchestrator.yaml  task_rewriter.yaml  trained_answer_agent.yaml  trained_operator.yaml  trajectory_reflector.yaml
mobile_use/environment/: __init__.py  adb_utils.py  mobile_environ.py
mobile_use/schema/: __init__.py  config.py  schema.py
mobile_use/utils/: __init__.py  logger.py  utils.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_environment.py  test_schema.py  test_utils.py  test_vlm.py
(+23 files in other folders)
